# GENAI_CXL_PLUS

./: .gitignore  README.md
Files/: grub
faiss/: README.md  create_index.py  load_index.py  load_index_only.py  run_load.sh  run_load_2.sh  run_load_3.sh  run_load_4.sh  test_faiss.ipynb
monitor/: CMakeLists.txt  Readme.md  monitor.cpp  monitor.h  monitor_new.cpp  monitoring.py
monitor/simple/: CMakeLists.txt  simple.cpp
scripts/: AverageforMonitor.py  MedianforPqos.py  README.md  createCommandlab-GB-node0.py
vectordb/: README.md  Readme.md  create_idx.py  create_shard_idx.py  query_shard_idx.py  requirements.txt  run_vdb.py  shard_test.ipynb  split_by_centroids.py  test.ipynb
vectordb/knn_datasets/: workloads.ipynb
vectordb/notebooks/: algorithms.ipynb  shard_test.ipynb
vectordb/old/: query_idx.py
vectordb/utils/: logger.py  search_by_topology.py  vdb_utils.py
